# jd-workshop02-fastapi

./: main.py  pyproject.toml  testes.py
.github/workflows/: main.yml
app/: data.py  main.py  schema.py
tests/: test_api.py
