[tool.poetry]
name = "workshop02"
version = "0.1.0"
description = ""
authors = ["Victor Contreras <contreras3991@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
taskipy = "^1.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
run = "uvicorn app.main:app --reload"
test = "pytest -v"
kill = "kill -9 $(lsof -t -i:8000)"
